# poker-ols

./: .gitignore  README.md  build_dataset.py  gender_analysis.py  get_dataset.py  get_repo_contents.py  main.py  poker_analysis.py  poker_stats.csv  pyproject.toml
plots/: regression_table.md
poker/: README.md  build_dataset.py  find_csv.py  get_data_handhq.py  poker_hand_analysis.py  poker_stats.csv  read_phh.py  starting_hand_stats.csv
