[project]
name = "progettostat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gender-guesser>=0.4.0",
    "matplotlib>=3.10.9",
    "numba>=0.61.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pokerkit>=0.7.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.6",
    "xgboost>=3.3.0",
]
